--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,10 @@ h1, h2, h3 {
 	color: var(--color-red);
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
 
 -----------------------------------------------
 /* tlacitko */
